--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <section data-markdown data-background-image="/images/introduction.jpg" 
+          data-background-size="100%" data-background-repeat="no-repeat">>
+          <textarea data-template>
+            # Introduction
+          </textarea>
+        </section>
       </div>
     </div>
 
