Update slide template files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="dist/theme/tech-0.css" id="theme">
 
     <!-- Theme used for syntax highlighted code -->
-    <link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
+    <link rel="stylesheet" href="plugin/highlight/atom-light.css" id="highlight-theme">
   </head>
   <body>
     <div class="reveal">
@@ -21,15 +21,72 @@
               data-separator-vertical="^\n\n"
               data-separator-notes="^Note:"
               data-charset="iso-8859-15"
-              data-background-image="/images/introduction.jpg" 
+              data-background-image="/images/intro.jpg" 
               data-background-size="100%" data-background-repeat="no-repeat">
       </section>
-      <section data-markdown="templates/introduction.md"
+      <section data-markdown="templates/schedule.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15"
+        data-background-image="images/backgrounds/bg-meta.jpg" 
+        data-background-size="100%" data-background-repeat="no-repeat"
+        >
+      </section>
+      <section data-markdown="templates/section.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15"
+        data-background-color="#F7CA00">
+      </section>
+            <section data-markdown="templates/code.md"
         data-separator="^\n\n\n"
         data-separator-vertical="^\n\n"
         data-separator-notes="^Note:"
         data-charset="iso-8859-15">
       </section>
+      <section data-markdown="templates/image.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15">
+      </section>
+      <section data-markdown="templates/definition.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15">
+      </section>
+      <section data-background-iframe="https://glitch.com/edit/#!/friendly-dream?path=index.html%3A30%3A0"
+          data-background-interactive>
+      </section>
+      <section data-background-image="images/schema.png" 
+          data-background-size="100%" data-background-repeat="no-repeat"
+          data-background-color="fff">
+    </section>
+          <section data-markdown="templates/assignment.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15"
+        data-background-color="#E75B80">
+      </section>
+                <section data-markdown="templates/faq.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15">
+      </section>
+      <section data-markdown="templates/ending.md"
+        data-separator="^\n\n\n"
+        data-separator-vertical="^\n\n"
+        data-separator-notes="^Note:"
+        data-charset="iso-8859-15"
+        data-background-image="/images/background.jpg" 
+        data-background-size="100%" data-background-repeat="no-repeat">
+</section>
+
       </div>
     </div>
 
